<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodShare</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <string name="title_home">Home</string>
    <string name="donate">Donate</string>
    <string name="profile">Profile</string>
    <string name="food_image">Food image</string>
    <string name="live_donations">Available Donations</string>
    <string name="no_donations_available">No donations available right now.</string>
    <string name="food_details">Food Details</string>
    <string name="description">Description</string>
    <string name="request_food">Request Food</string>
    <string name="request_message">Write a short request message</string>
    <string name="my_donations">My Donations</string>
    <string name="my_requests">My Requests</string>
    <string name="no_donations_yet">You have not donated food yet.</string>
    <string name="no_requests_yet">You have not requested food yet.</string>
    <string name="select_food_image">Select Food Image</string>
    <string name="food_name">Food Name</string>
    <string name="quantity">Quantity</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="expiry_time">Expiry Time</string>
    <string name="submit_donation">Submit Donation</string>
    <string name="home_subtitle_message">FoodShare helps donors connect with people and NGOs who need food, without wasting meals.</string>

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="login_subtitle">Login to continue helping your community</string>
    <string name="no_account_signup">Don’t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="demo_login_hint"> </string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>

    <string name="manage_requests">Manage Requests</string>
</resources>